--- a/aluramidi-curso-arquivos-iniciais/index.html
+++ b/aluramidi-curso-arquivos-iniciais/index.html
@@ -35,15 +35,15 @@
         <button class="tecla tecla_tom">Tom</button>
     </section>
 
-    <audio src="sounds/keyq.wav" id="som_tecla_pom"></audio>
-    <audio src="sounds/keyw.wav" id="som_tecla_clap"></audio>
-    <audio src="sounds/keye.wav" id="som_tecla_tim"></audio>
-    <audio src="sounds/keya.wav" id="som_tecla_puff"></audio>
-    <audio src="sounds/keys.wav" id="som_tecla_splash"></audio>
-    <audio src="sounds/keyd.wav" id="som_tecla_toim"></audio>
-    <audio src="sounds/keyz.wav" id="som_tecla_psh"></audio>
-    <audio src="sounds/keyx.wav" id="som_tecla_tic"></audio>
-    <audio src="sounds/keyc.wav" id="som_tecla_tom"></audio>
+     <audio src="sounds/bafomee 1" id="som_tecla_bafomee 1"></audio>
+    <audio src="sounds/bafomee 2" id="som_tecla_bafomeee 2"></audio>
+    <audio src="sounds/iraaa" id="som_tecla_iraa"></audio>
+    <audio src="sounds/jesusss " id="som_tecla_jesuss"></audio>
+    <audio src="sounds/PARE!!!" id="som_tecla_PARE!!"></audio>
+    <audio src="sounds/rapazzzz" id="som_tecla_rapazz"></audio>
+    <audio src="sounds/ratinho sei lá oq" id="som_tecla_ratinho sei lá"></audio>
+    <audio src="sounds/uepaaaaa" id="som_tecla_uepaa"></audio>
+    <audio src="sounds/yeeeeee haaaaa" id="som_tecla_yeeee haa"></audio>
 
 </body>
 </html>
