--- a/aluramidi-curso-arquivos-iniciais/index.html
+++ b/aluramidi-curso-arquivos-iniciais/index.html
@@ -22,17 +22,17 @@
     <h1>Alura Midi</h1>
 
     <section class="teclado">
-        <button class="tecla tecla_pom">Pom</button>
-        <button class="tecla tecla_clap">Clap</button>
-        <button class="tecla tecla_tim">Tim</button>
+        <button class="tecla tecla_bafomee1">bafomee 1</button>
+        <button class="tecla tecla_bafomeee 2">bafomeee 2</button>
+        <button class="tecla tecla_iraa">iraa</button>
 
-        <button class="tecla tecla_puff">Puff</button>
-        <button class="tecla tecla_splash">Splash</button>
-        <button class="tecla tecla_toim">Toim</button>
+        <button class="tecla tecla_jesuss">jesuss</button>
+        <button class="tecla tecla_PARE!!">PARE!!</button>
+        <button class="tecla tecla_rapazz">rapazz</button>
 
-        <button class="tecla tecla_psh">Psh</button>
-        <button class="tecla tecla_tic">Tic</button>
-        <button class="tecla tecla_tom">Tom</button>
+        <button class="tecla tecla_ratinho sei lá">ratinho sei lá</button>
+        <button class="tecla tecla_uepaa">uepaa</button>
+        <button class="tecla tecla_yeeee haa">yeeee haa</button>
     </section>
 
      <audio src="sounds/bafomee 1" id="som_tecla_bafomee 1"></audio>
