--- a/aluramidi-curso-arquivos-iniciais/index.html
+++ b/aluramidi-curso-arquivos-iniciais/index.html
@@ -35,7 +35,7 @@
         <button class="tecla tecla_yeeee haa">yeeee haa</button>
     </section>
 
-     <audio src="sounds/bafomee 1" id="som_tecla_bafomee 1"></audio>
+     <audio src="baphomet-xandão-made-with-Voicemod-technology.mp3" id="som_tecla_bafomee 1"></audio>
     <audio src="sounds/bafomee 2" id="som_tecla_bafomeee 2"></audio>
     <audio src="sounds/iraaa" id="som_tecla_iraa"></audio>
     <audio src="sounds/jesusss " id="som_tecla_jesuss"></audio>
