--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </section>
 
     <audio src="sounds/baphomet-xandão-made-with-Voicemod-technology.mp3" id="som_tecla_pom"></audio>
-    <audio src="sounds/keyw.wav" id="som_tecla_clap"></audio>
+    <audio src="iiirrraaaaaaa-made-with-Voicemod-technology.mp3" id="som_tecla_clap"></audio>
     <audio src="sounds/keye.wav" id="som_tecla_tim"></audio>
     <audio src="sounds/keya.wav" id="som_tecla_puff"></audio>
     <audio src="sounds/keys.wav" id="som_tecla_splash"></audio>
