--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <audio src="sounds/baphomet-xandão-made-with-Voicemod-technology.mp3" id="som_tecla_pom"></audio>
     <audio src="iiirrraaaaaaa-made-with-Voicemod-technology.mp3" id="som_tecla_clap"></audio>
-    <audio src="sounds/keye.wav" id="som_tecla_tim"></audio>
+    <audio src="jeeeesus---ratinho-made-with-Voicemod-technology.mp3" id="som_tecla_tim"></audio>
     <audio src="sounds/keya.wav" id="som_tecla_puff"></audio>
     <audio src="sounds/keys.wav" id="som_tecla_splash"></audio>
     <audio src="sounds/keyd.wav" id="som_tecla_toim"></audio>
