--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <audio src="sounds/baphomet-xandão-made-with-Voicemod-technology.mp3" id="som_tecla_pom"></audio>
     <audio src="iiirrraaaaaaa-made-with-Voicemod-technology.mp3" id="som_tecla_clap"></audio>
     <audio src="jeeeesus---ratinho-made-with-Voicemod-technology.mp3" id="som_tecla_tim"></audio>
-    <audio src="sounds/keya.wav" id="som_tecla_puff"></audio>
+    <audio src="pare-made-with-Voicemod-technology.mp3" id="som_tecla_puff"></audio>
     <audio src="sounds/keys.wav" id="som_tecla_splash"></audio>
     <audio src="sounds/keyd.wav" id="som_tecla_toim"></audio>
     <audio src="sounds/keyz.wav" id="som_tecla_psh"></audio>
