--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <audio src="iiirrraaaaaaa-made-with-Voicemod-technology.mp3" id="som_tecla_clap"></audio>
     <audio src="jeeeesus---ratinho-made-with-Voicemod-technology.mp3" id="som_tecla_tim"></audio>
     <audio src="pare-made-with-Voicemod-technology.mp3" id="som_tecla_puff"></audio>
-    <audio src="sounds/keys.wav" id="som_tecla_splash"></audio>
+    <audio src="rapazzzz---xaropinho-made-with-Voicemod-technology.mp3" id="som_tecla_splash"></audio>
     <audio src="sounds/keyd.wav" id="som_tecla_toim"></audio>
     <audio src="sounds/keyz.wav" id="som_tecla_psh"></audio>
     <audio src="sounds/keyx.wav" id="som_tecla_tic"></audio>
