--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <audio src="sounds/rapazzzz---xaropinho-made-with-Voicemod-technology.mp3" id="som_tecla_splash"></audio>
     <audio src="sounds/ratinhooooo-made-with-Voicemod-technology.mp3" id="som_tecla_toim"></audio>
     <audio src="sounds/super-xandão-made-with-Voicemod-technology.mp3" id="som_tecla_psh"></audio>
-    <audio src="sounds/keyx.wav" id="som_tecla_tic"></audio>
+    <audio src="sounds/todos-os-sons-do-ratinho-made-with-Voicemod-technology.mp3" id="som_tecla_tic"></audio>
     <audio src="sounds/keyc.wav" id="som_tecla_tom"></audio>
 
     <script src="main.js"></script>
