--- a/index.html
+++ b/index.html
@@ -21,28 +21,28 @@
     <h1>Alura Midi</h1>
 
     <section class="teclado">
-        <button class="tecla tecla_pom">Pom</button>
-        <button class="tecla tecla_clap">Clap</button>
-        <button class="tecla tecla_tim">Tim</button>
+        <button class="tecla tecla_BAPHOMET">BAPHOMET</button>
+        <button class="tecla tecla_IRRA">IRRA</button>
+        <button class="tecla tecla_JESUS">JESUS</button>
 
-        <button class="tecla tecla_puff">Puff</button>
-        <button class="tecla tecla_splash">Splash</button>
-        <button class="tecla tecla_toim">Toim</button>
+        <button class="tecla tecla_PARE">PARE</button>
+        <button class="tecla tecla_RAPAZ">RAPAZ</button>
+        <button class="tecla tecla_RATO">RATO</button>
 
-        <button class="tecla tecla_psh">Psh</button>
-        <button class="tecla tecla_tic">Tic</button>
-        <button class="tecla tecla_tom">Tom</button>
+        <button class="tecla tecla_XANDI">XANDI</button>
+        <button class="tecla tecla_RATO 2">RATO 2</button>
+        <button class="tecla tecla_UEPA">UEPA</button>
     </section>
 
-    <audio src="sounds/baphomet-xandão-made-with-Voicemod-technology.mp3" id="som_tecla_pom"></audio>
-    <audio src="sounds/iiirrraaaaaaa-made-with-Voicemod-technology.mp3" id="som_tecla_clap"></audio>
-    <audio src="sounds/jeeeesus---ratinho-made-with-Voicemod-technology.mp3" id="som_tecla_tim"></audio>
-    <audio src="sounds/pare-made-with-Voicemod-technology.mp3" id="som_tecla_puff"></audio>
-    <audio src="sounds/rapazzzz---xaropinho-made-with-Voicemod-technology.mp3" id="som_tecla_splash"></audio>
-    <audio src="sounds/ratinhooooo-made-with-Voicemod-technology.mp3" id="som_tecla_toim"></audio>
-    <audio src="sounds/super-xandão-made-with-Voicemod-technology.mp3" id="som_tecla_psh"></audio>
-    <audio src="sounds/todos-os-sons-do-ratinho-made-with-Voicemod-technology.mp3" id="som_tecla_tic"></audio>
-    <audio src="sounds/uepaaa-made-with-Voicemod-technology.mp3" id="som_tecla_tom"></audio>
+    <audio src="sounds/baphomet-xandão-made-with-Voicemod-technology.mp3" id="som_tecla_BAPHOMET"></audio>
+    <audio src="sounds/iiirrraaaaaaa-made-with-Voicemod-technology.mp3" id="som_tecla_IRRA"></audio>
+    <audio src="sounds/jeeeesus---ratinho-made-with-Voicemod-technology.mp3" id="som_tecla_JESUS"></audio>
+    <audio src="sounds/pare-made-with-Voicemod-technology.mp3" id="som_tecla_PARE"></audio>
+    <audio src="sounds/rapazzzz---xaropinho-made-with-Voicemod-technology.mp3" id="som_tecla_RAPAZ"></audio>
+    <audio src="sounds/ratinhooooo-made-with-Voicemod-technology.mp3" id="som_tecla_RATO"></audio>
+    <audio src="sounds/super-xandão-made-with-Voicemod-technology.mp3" id="som_tecla_XANDI"></audio>
+    <audio src="sounds/todos-os-sons-do-ratinho-made-with-Voicemod-technology.mp3" id="som_tecla_RATO 2"></audio>
+    <audio src="sounds/uepaaa-made-with-Voicemod-technology.mp3" id="som_tecla_UEPA"></audio>
 
     <script src="main.js"></script>
 
