--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <h1>Alura Midi</h1>
 
     <section class="teclado">
-        <button class="tecla tecla_BAPHOMET">BAPHOMET</button>
+        <button class="tecla tecla_BAPHO">BAPHO</button>
         <button class="tecla tecla_IRRA">IRRA</button>
         <button class="tecla tecla_JESUS">JESUS</button>
 
@@ -34,7 +34,7 @@
         <button class="tecla tecla_UEPA">UEPA</button>
     </section>
 
-    <audio src="sounds/baphomet-xandão-made-with-Voicemod-technology.mp3" id="som_tecla_BAPHOMET"></audio>
+    <audio src="sounds/baphomet-xandão-made-with-Voicemod-technology.mp3" id="som_tecla_BAPHO"></audio>
     <audio src="sounds/iiirrraaaaaaa-made-with-Voicemod-technology.mp3" id="som_tecla_IRRA"></audio>
     <audio src="sounds/jeeeesus---ratinho-made-with-Voicemod-technology.mp3" id="som_tecla_JESUS"></audio>
     <audio src="sounds/pare-made-with-Voicemod-technology.mp3" id="som_tecla_PARE"></audio>
